Fix hero image on iOS: replace background-attachment fixed with scroll

--- a/main.css
+++ b/main.css
@@ -621,7 +621,7 @@ sans-serif;
     background-image: url('hero-driveway.jpg');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: scroll;
     margin-top: 100px;
     min-height: calc(90vh - 100px);
 }
